item reactions implementation